--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.12.1",
+    "editor.md": "^1.5.0",
+    "element-ui": "^2.15.1",
+    "jquery": "^3.6.0",
+    "loadsh": "0.0.4",
+    "markdown-it": "^12.0.6",
+    "mavon-editor": "^2.9.1",
+    "moment": "^2.27.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-vue": "^0.11.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -17,6 +27,8 @@
     "@vue/cli-plugin-router": "^4.5.13",
     "@vue/cli-plugin-vuex": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
+    "babel-plugin-component": "^1.1.1",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.12"
   },
   "browserslist": [
