--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "core-js": "^3.12.1",
     "editor.md": "^1.5.0",
     "element-ui": "^2.15.1",
-    "jquery": "^3.6.0",
     "loadsh": "0.0.4",
     "markdown-it": "^12.0.6",
     "mavon-editor": "^2.9.1",
@@ -28,8 +27,11 @@
     "@vue/cli-plugin-vuex": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
     "babel-plugin-component": "^1.1.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^7.0.0",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.0.0"
   },
   "browserslist": [
     "> 1%",
